readonly-k8s-operations-ingress.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: kube-ops
  labels:
    project.name: k8s-operations
    project.app: k8s-operations
---
apiVersion: v1
kind: Service
metadata:
  annotations:
    prometheus.io/scrape: 'true'
  labels:
    project.app: k8s-operations
    project.name: k8s-operations
  name: k8s-operations
  namespace: kube-ops
spec:
  ports:
    - name: http
      port: 80
      protocol: TCP
      targetPort: 8080
  selector:
    project.app: k8s-operations
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    project.name: k8s-operations
    project.app: k8s-operations
  name: k8s-operations
  namespace: kube-ops
spec:
  progressDeadlineSeconds: 600
  replicas: 1
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      project.app: k8s-operations
  strategy:
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 1
    type: RollingUpdate
  template:
    metadata:
      creationTimestamp: null
      labels:
        project.app: k8s-operations
    spec:
      containers:
      - env:
        - name: CLUSTER_NAME
          value: navneet.cfcr.demo 
        image: whoami6443/k8soper:0.0.7
        imagePullPolicy: IfNotPresent
        name: k8s-operations
        ports:
        - containerPort: 8080
          protocol: TCP
        resources:
          limits:
            cpu: 100m
            memory: 128Mi
          requests:
            cpu: 50m
            memory: 64Mi
        readinessProbe:
          httpGet:
            path: /itam.txt
            port: 8080
          initialDelaySeconds: 10
          periodSeconds: 10
        securityContext:
          readOnlyRootFilesystem: true
          allowPrivilegeEscalation: false
          privileged: false
          runAsNonRoot: false
          #runAsNonRoot: true
          #runAsUser: 9999
        volumeMounts:
        - mountPath: /user/k8soper
          name: cache-volume
        terminationMessagePath: /dev/termination-log
        terminationMessagePolicy: File
        stdin: true
        tty: true
      volumes:
      - name: cache-volume
        emptyDir: {}
      dnsPolicy: ClusterFirst
      schedulerName: default-scheduler
      securityContext: {}
      serviceAccount: k8s-operations
      serviceAccountName: k8s-operations
      terminationGracePeriodSeconds: 30
---
#apiVersion: extensions/v1beta1
#kind: Ingress
#metadata:
#  name: k8s-operations
#  namespace: kube-ops
#  annotations:
#    kubernetes.io/ingress.class: nginx
    #    traefik.frontend.rule.type: "PathPrefixStrip"
    #ingress.kubernetes.io/custom-response-headers: "Strict-Transport-Security: max-age=31536000; includeSubDomains"
#  labels:
#    project.name: k8s-operations
#    project.app: k8s-operations
#spec:
#  rules:
#    - host: cluster00.navlab.io 
#      http:
#        paths:
#          - path: /itam
#            backend:
#              serviceName: k8s-operations
#              servicePort: 80
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: "contour"
  name: k8s-operations
  namespace: kube-ops
  labels:
    project.name: k8s-operations
    project.app: k8s-operations
spec:
  rules:
  - host: cluster00.navlab.io
    http:
      paths:
      - pathType: Prefix
        path: /itam
        backend:
          service:
            name: k8s-operations
            port:
              number: 80
