readonly-k8s-operations-istio.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: default
  labels:
    project.name: k8s-operations
    project.app: k8s-operations
---
apiVersion: v1
kind: Service
metadata:
  annotations:
    prometheus.io/scrape: 'true'
  labels:
    project.app: k8s-operations
    project.name: k8s-operations
  name: k8s-operations
  namespace: default
spec:
  ports:
    - name: http
      port: 80
      protocol: TCP
      targetPort: 8080
  selector:
    project.app: k8s-operations
---
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  labels:
    project.name: k8s-operations
    project.app: k8s-operations
  name: k8s-operations
  namespace: default
spec:
  progressDeadlineSeconds: 600
  replicas: 1
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      project.app: k8s-operations
  strategy:
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 1
    type: RollingUpdate
  template:
    metadata:
      creationTimestamp: null
      labels:
        project.app: k8s-operations
    spec:
      containers:
      - env:
        - name: CLUSTER_NAME
          value: cluster00.awscloud.navneetv.com
        image: whoami6443/k8soper:0.0.6
        imagePullPolicy: IfNotPresent
        name: k8s-operations
        ports:
        - containerPort: 8080
          protocol: TCP
        resources:
          limits:
            cpu: 100m
            memory: 128Mi
          requests:
            cpu: 50m
            memory: 64Mi
        securityContext:
          readOnlyRootFilesystem: true
          allowPrivilegeEscalation: false
          privileged: false
          runAsNonRoot: false
          #runAsNonRoot: true
          #runAsUser: 9999
        volumeMounts:
        - mountPath: /user/k8soper
          name: cache-volume
        terminationMessagePath: /dev/termination-log
        terminationMessagePolicy: File
        stdin: true
        tty: true
      volumes:
      - name: cache-volume
        emptyDir: {}
      dnsPolicy: ClusterFirst
      schedulerName: default-scheduler
      securityContext: {}
      serviceAccount: k8s-operations
      serviceAccountName: k8s-operations
      terminationGracePeriodSeconds: 30
---
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: k8s-operations-gateway
  namespace: default
spec:
  selector:
    istio: ingressgateway # use istio default controller
  servers:
  - port:
      number: 80
      name: http
      protocol: HTTP
    hosts:
    - "*"
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: k8s-operations-virtualservice
  namespace: default
spec:
  hosts:
  - "*"
  gateways:
  - k8s-operations-gateway
  http:
  - match:
    - uri:
        exact: /itam.txt
    route:
    - destination:
        host: k8s-operations
        port:
          number: 80
